tests/compile/child_and_legacy_children_list.stderr
error: #[plexus_macros::child] methods cannot be combined with the legacy `children = [...]` activation attribute on the same impl; choose one. Remove `children = [...]` to migrate to the method-based syntax.
  --> tests/compile/child_and_legacy_children_list.rs:34:1
   |
34 | / impl Solar {
35 | |     #[plexus_macros::method]
36 | |     async fn ping(&self) -> impl Stream<Item = String> + Send + 'static {
37 | |         stream! { yield "pong".into(); }
...  |
44 | | }
   | |_^

warning: use of deprecated struct `plexus_core::ChildCapabilities`: Use MethodRole::DynamicChild { list_method, search_method } instead. Removed in 0.7.
  --> tests/compile/child_and_legacy_children_list.rs:11:1
   |
11 | / #[plexus_macros::activation(
12 | |     namespace = "leaf",
13 | |     version = "1.0.0",
14 | |     crate_path = "plexus_core"
15 | | )]
   | |__^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)
